--- a/css/style.scss
+++ b/css/style.scss
@@ -1,11 +1,51 @@
+@mixin responsive() {
+    @media screen and (max-width: 960px) {
+      @content;
+    }
+  }
+
+@import 'partials/colors';
+@import 'partials/spacing';
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Mukta', sans-serif;
 }
 
 body {
     width: 100%;
     height: 100vh;
-    background-color: #1A1A1A;
+    background-color: $blue-dark;
 }
+
+img, svg {
+    display: block;
+    width: 100%;
+}
+
+a {
+    text-decoration: none;
+    color: $white;
+}
+
+p {
+    font-size: 16px;
+    color: $gray-3;
+    letter-spacing: 1px;
+    line-height: 140%;
+}
+
+li {
+    list-style: none;
+}
+
+.border {
+    border: 1px solid red;
+}
+
+
+@import 'partials/layout';
+@import 'partials/menu';
+@import 'partials/animations';
